tweak scroller distance from top to prevent link overlapping

--- a/src/components/style.css
+++ b/src/components/style.css
@@ -11,4 +11,8 @@
     .blog-container {
         padding: 2rem 15rem;
     }
+
+    .check-mark-wrapper {
+        top: 3.1rem;
+    }
 }
